--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   firebase_core: ^2.4.1
   provider:
   google_sign_in: ^5.4.3
-  cloud_firestore: ^4.3.1 
+  cloud_firestore: ^4.3.1
+  smooth_page_indicator:
+  flutterwave_standard: 1.0.5  
   
 
 
