--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   cloud_firestore: ^4.3.1
   smooth_page_indicator:
   flutterwave_standard: 1.0.5
-  http: ^0.13.5  
+  http: ^0.13.5
+  mockito:  
   
 
 
