--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   google_sign_in: ^5.4.3
   cloud_firestore: ^4.3.1
   smooth_page_indicator:
-  flutterwave_standard: 1.0.5
+  flutterwave_standard:
   http: ^0.13.5
-  mockito:  
-  
-
+  mockito:
+  flutter_datetime_picker:
+  intl:
+  get:
+  flutterwave_payment: 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
