--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
+  flutter_local_notifications: ^9.2.0
   provider:
   google_sign_in: ^5.4.3
   cloud_firestore: ^4.3.1
@@ -44,11 +45,16 @@ dependencies:
   flutter_datetime_picker:
   intl:
   get:
-  flutterwave_payment: 
+  flutterwave_payment:
+  awesome_notifications: 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^14.5.0
+  csv: ^5.0.2
+  path_provider: ^2.0.15
+  firebase_storage: ^11.1.2
 
 dev_dependencies:
   flutter_test:
